Using SAM instead of RAW CloudFormation and added demo api 3 for checking
