# src/main/java/com/demo/handler/EmployeeApiHandler.java
@@ -37,6 +37,9 @@ public class EmployeeApiHandler implements RequestHandler<APIGatewayProxyRequest
                     if("/demo-api-2".equals(path)){
                         return response(200, JsonUtil.toJson(employeeDAO.getAllEmployees()));
                     }
+                    if("/demo-api-3".equals(path)){
+                        return response(200, JsonUtil.toJson(employeeDAO.getAllEmployees()));
+                    }
                     break;
 
                 case "POST":
